--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Add PDF generation libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+     <script src="https://cdn.counter.dev/script.js" data-id="33e5dc6a-6c72-41fd-83ac-18d3b6411bea" data-utcoffset="6"></script>
 </head>
 <body>
     <div class="container">
