--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 West Bengal Council of Higher Secondary Education. All Rights Reserved.</p>
+            <p>&copy; 2025 Koushik Mandal. All Rights Reserved.</p>
         </footer>
     </div>
 
