--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>West Bengal HS Result Portal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- SEO Title -->
+    <title>West Bengal HS Result 2025 | WBCHSE 12th Result | Check Online</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Check West Bengal HS Result 2025 online from the official WBCHSE result portal. Download WB 12th marksheet, view toppers list, and get latest updates.">
+    <meta name="keywords" content="West Bengal HS Result 2025, WBCHSE Result 2025, WB 12th Result 2025, West Bengal Higher Secondary Result, West Bengal 12th Result, WB Board Result, download marksheet, wbresults.nic.in, West Bengal result portal">
+    
     <!-- Add PDF generation libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
      <script src="https://cdn.counter.dev/script.js" data-id="33e5dc6a-6c72-41fd-83ac-18d3b6411bea" data-utcoffset="6"></script>
