--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         </div>
                         
                         <div class="summary-card">
-                            <div class="summary-title">Percentage</div>
+                            <div class="summary-title">Percentile</div>
                             <div class="summary-content">
                                 <div class="summary-item">
                                     <span id="student1-percentage">-</span>
