--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                         <th>Theory Marks</th>
                                         <th>Practical Marks</th>
                                         <th>Total Marks</th>
-                                        <th>Percentage</th>
+                                        <th>Percentile</th>
                                         <th>Grade</th>
                                     </tr>
                                 </thead>
@@ -314,7 +314,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 West Bengal Council of Higher Secondary Education. All Rights Reserved.</p>
+            <p>&copy; 2025 Koushik Mandal. All Rights Reserved.</p>
         </footer>
     </div>
 
