--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <section class="comparison-result-section" id="comparison-result-section" style="display: none;">
                 <div class="result-card">
                     <div class="result-header">
-                        <img src="https://wbresults.nic.in/images/wblogo.png" alt="West Bengal Board Logo" class="result-logo">
+                        <img src="logo.png" alt="West Bengal Board Logo" class="result-logo">
                         <h3>West Bengal Council of Higher Secondary Education</h3>
                         <h4>Result Comparison</h4>
                     </div>
